added getBridgeTokens api
