# backend/api/routes/index.ts
@@ -2,6 +2,7 @@ import express from "express";
 import { quote } from "../controllers/bridgeController";
 import { checkAllowance, buildAllowanceTx } from "../controllers/allowanceController";
 import { buildTransaction } from "../controllers/bridgeController";
+import { getBridgeTokens } from "../controllers/commonController";
 
 const routes = express.Router();
 
@@ -10,5 +11,7 @@ routes.get("/approval/check-allowance", checkAllowance);
 
 routes.get("/bridge/build-tx", buildTransaction);
 routes.get("/bridge/quote", quote);
+
+routes.get("/common/tokens", getBridgeTokens);
 
 export default routes;
